feat : add user controller and swagger docs
