# backend/src/routes/user.routes.ts
@@ -1,9 +1,15 @@
 import { Router } from "express";
 
+import verifyToken from "../middleware/auth.middleware";
+
 import {
   registerUser,
-  loginUser
+  loginUser,
+  tokenValidation,
+  logoutUser,
+  getCurrentUser
 } from "../controllers/user.controller";
+
 
 const router = Router();
 
@@ -11,5 +17,11 @@ router.post('/register', registerUser);
 
 router.post('/login', loginUser);
 
+router.get("/validate-token", verifyToken, tokenValidation);
+
+router.get("/current-user", verifyToken, getCurrentUser);
+
+
+router.post('/logout', logoutUser);
 
 export default router;
